apps/rampme/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rampme-backend
  namespace: rampme
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: rampme-api
  hostnames:
    - api.rampme.site
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - name: rampme-backend
          port: 3000
